crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__assert-tuple_F631.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F631 Assert test is a non-empty tuple, which is always `True`
 --> F631.py:1:1
  |
1 | assert (False, "x")
  | ^^^^^^^^^^^^^^^^^^^
2 | assert (False,)
3 | assert ()
  |

F631 Assert test is a non-empty tuple, which is always `True`
 --> F631.py:2:1
  |
1 | assert (False, "x")
2 | assert (False,)
  | ^^^^^^^^^^^^^^^
3 | assert ()
4 | assert True
  |
