crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__default_builtins.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `_`
 --> builtins.py:1:1
  |
1 | _("Translations")
  | ^
