crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__del_shadowed_global_import_in_local_scope.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `os` imported but unused
 --> <filename>:2:8
  |
2 | import os
  |        ^^
3 |
4 | def f():
  |
help: Remove unused import: `os`
  |
1 |
  - import os
2 |
  |

F811 [*] Redefinition of unused `os` from line 2
 --> <filename>:5:12
  |
2 | import os
  |        -- previous definition of `os` here
3 |
4 | def f():
5 |     import os
  |            ^^ `os` redefined here
6 |
7 |     # Despite this `del`, `import os` in `f` should still be flagged as shadowing an unused
  |
help: Remove definition: `os`
  |
4 | def f():
  -     import os
5 |
  |
