crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__double_del.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `x`
 --> <filename>:5:9
  |
3 |     x = 1
4 |     del x
5 |     del x
  |         ^
